[package]
name = "key-exchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
futures = "0.3.28"
prost = "0.11.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
p256 = { version = "0.10.0", features = ["ecdh"] }
rand_core = "0.6.4"
hex = "0.4.3"
dashmap = "5.4.0"
lazy_static = "1.4.0"
ring = "0.16.20"

[dev-dependencies]
hex-literal = "0.3.4"
bincode = "1.3.3"
serde = { version = "1.0.160", features = ["derive"] }

[build-dependencies]
prost-build = "0.11.9"
